@@ -1,5 +1,6 @@
 package com.project.GestionCharite.services;
 
+import com.project.GestionCharite.dto.PageResponse;
 import com.project.GestionCharite.dto.AdminDTOs.AdminStatsResponse;
 import com.project.GestionCharite.dto.CharityDTOs.ActionResponse;
 import com.project.GestionCharite.dto.UserDTOs.UserCreateRequest;
@@ -14,6 +15,10 @@ import com.project.GestionCharite.repositories.OrganizationRepository;
 import com.project.GestionCharite.repositories.UserRepository;
 
 import lombok.RequiredArgsConstructor;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -43,10 +48,22 @@ public class AdminService {
     }
 
     // 2. User Management
-    public List<UserResponse> getAllUsers() {
-        return userRepository.findAll().stream()
-                .map(this::mapUserToResponse)
-                .collect(Collectors.toList());
+    public PageResponse<UserResponse> getAllUsers(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<User> userPage = userRepository.findAll(pageable);
+        List<UserResponse> content = userPage.getContent().stream()
+                                        .map(this::mapUserToResponse)
+                                        .toList(); 
+
+
+        return PageResponse.<UserResponse>builder()
+                    .content(content)
+                    .pageNumber(userPage.getNumber())
+                    .pageSize(userPage.getSize())
+                    .totalElements(userPage.getTotalElements())
+                    .totalPages(userPage.getTotalPages())
+                    .isLast(userPage.isLast())
+                    .build();
     }
 
     // 3. Global Campaign Management
